--- a/package.json
+++ b/package.json
@@ -7,20 +7,22 @@
   "author": "Petri Lehtinen <petri@digip.org>",
   "license": "MIT",
   "dependencies": {
-    "fp-ts": "^2.0.5",
-    "jest": "^24.9.0",
-    "jest-cli": "^24.9.0",
-    "pg": "^7.12.1",
-    "ramda": "^0.26.1",
-    "ts-jest": "^24.0.2",
-    "typed-parser": "^0.1.4"
+    "buffer-writer": "^2.0.0",
+    "packet-reader": "^1.0.0",
+    "pg-connection-string": "^2.1.0",
+    "pg-pool": "^2.0.7",
+    "pg-types": "^2.2.0",
+    "pgpass": "^1.0.2",
+    "ramda": "^0.26.1"
   },
   "devDependencies": {
     "@types/jest": "^24.0.18",
     "@types/node": "^12.7.3",
-    "@types/pg": "^7.11.0",
     "@types/ramda": "^0.26.21",
+    "jest": "^24.9.0",
+    "jest-cli": "^24.9.0",
     "prettier": "^1.18.2",
+    "ts-jest": "^24.0.2",
     "ts-node": "^8.3.0",
     "typescript": "^3.6.2"
   }
