--- a/package.json
+++ b/package.json
@@ -8,18 +8,23 @@
   "license": "MIT",
   "dependencies": {
     "buffer-writer": "^2.0.0",
+    "camelcase": "^5.3.1",
     "fp-ts": "^2.0.5",
     "packet-reader": "^1.0.0",
     "pg-connection-string": "^2.1.0",
     "pg-pool": "^2.0.7",
     "pg-types": "^2.2.0",
     "pgpass": "^1.0.2",
-    "ramda": "^0.26.1"
+    "ramda": "^0.26.1",
+    "typed-parser": "^0.1.4",
+    "yargs": "^14.0.0"
   },
   "devDependencies": {
+    "@types/camelcase": "^5.2.0",
     "@types/jest": "^24.0.18",
     "@types/node": "^12.7.3",
     "@types/ramda": "^0.26.21",
+    "@types/yargs": "^13.0.2",
     "jest": "^24.9.0",
     "jest-cli": "^24.9.0",
     "prettier": "^1.18.2",
