--- a/package.json
+++ b/package.json
@@ -6,19 +6,6 @@
   "repository": "https://github.com/akheron/sqltyper",
   "author": "Petri Lehtinen <petri@digip.org>",
   "license": "MIT",
-  "dependencies": {
-    "buffer-writer": "^2.0.0",
-    "camelcase": "^5.3.1",
-    "fp-ts": "^2.0.5",
-    "packet-reader": "^1.0.0",
-    "pg-connection-string": "^2.1.0",
-    "pg-pool": "^2.0.7",
-    "pg-types": "^2.2.0",
-    "pgpass": "^1.0.2",
-    "ramda": "^0.26.1",
-    "typed-parser": "^0.1.4",
-    "yargs": "^14.0.0"
-  },
   "devDependencies": {
     "@types/camelcase": "^5.2.0",
     "@types/jest": "^24.0.18",
@@ -31,7 +18,20 @@
     "ts-jest": "^24.0.2",
     "ts-node": "^8.3.0",
     "tslint": "^5.20.0",
-    "tslint-config-prettier": "^1.18.0",
-    "typescript": "^3.6.2"
+    "tslint-config-prettier": "^1.18.0"
+  },
+  "dependencies": {
+    "buffer-writer": "^2.0.0",
+    "camelcase": "^5.3.1",
+    "fp-ts": "^2.0.5",
+    "packet-reader": "^1.0.0",
+    "pg-connection-string": "^2.1.0",
+    "pg-pool": "^2.0.7",
+    "pg-types": "^2.2.0",
+    "pgpass": "^1.0.2",
+    "ramda": "^0.26.1",
+    "typed-parser": "^0.1.4",
+    "typescript": "^3.6.2",
+    "yargs": "^14.0.0"
   }
 }
