--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "outDir": "dist/",
     "target": "es6",
     "module": "commonjs",
-    "strict": true
+    "strict": true,
+    "allowJs": true
   }
 }
