Move cli to its own file to share more code with tests and cli

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "Petri Lehtinen <petri@digip.org>",
   "license": "MIT",
   "bin": {
-    "sqltyper": "./dist/src/index.js"
+    "sqltyper": "./dist/src/cli.js"
   },
   "scripts": {
     "build": "tsc",
