--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/jest": "^24.0.18",
     "@types/node": "^12.7.3",
     "@types/ramda": "^0.26.21",
+    "@types/wrap-ansi": "^3.0.0",
     "@types/yargs": "^13.0.2",
     "jest": "^24.9.0",
     "jest-cli": "^24.9.0",
@@ -45,6 +46,7 @@
     "ramda": "^0.26.1",
     "typed-parser": "^0.1.4",
     "typescript": "^3.6.2",
+    "wrap-ansi": "^6.0.0",
     "yargs": "^14.0.0"
   }
 }
