Add package.json keywords

--- a/package.json
+++ b/package.json
@@ -6,6 +6,12 @@
   "repository": "https://github.com/akheron/sqltyper",
   "author": "Petri Lehtinen <petri@digip.org>",
   "license": "MIT",
+  "keywords": [
+    "database",
+    "postgres",
+    "postgresql",
+    "typescript"
+  ],
   "files": [
     "dist"
   ],
