--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "sql": "ts-node src/cli.ts --prettify --pg-module ../pg src/sql/",
     "sql:check": "yarn run sql --check",
     "sql:watch": "yarn run sql --watch",
-    "lint": "prettier --check \"**/*.{ts,json,md}\"",
-    "lint:fix": "prettier --write \"**/*.{ts,json,md}\"",
+    "lint": "eslint '**/*.ts' && prettier --check \"**/*.{json,md}\"",
+    "lint:fix": "eslint --fix '**/*.ts' && prettier --write '**/*.{json,md}'",
     "build": "tsc",
     "test": "jest"
   },
@@ -34,12 +34,15 @@
     "@types/ramda": "^0.27.3",
     "@types/wrap-ansi": "^3.0.0",
     "@types/yargs": "^15.0.4",
+    "@typescript-eslint/eslint-plugin": "^2.31.0",
+    "@typescript-eslint/parser": "^2.31.0",
+    "eslint": "^6.8.0",
+    "eslint-plugin-prettier": "^3.1.3",
     "jest": "^26.0.1",
     "jest-cli": "^26.0.1",
     "prettier": "^2.0.2",
     "ts-jest": "^25.3.0",
-    "ts-node": "^8.8.1",
-    "tslint-config-prettier": "^1.18.0"
+    "ts-node": "^8.8.1"
   },
   "dependencies": {
     "buffer-writer": "^2.0.0",
