Use postgres.js
- Remove the bundled version of node-postgres

- Bundle a modified version of postgres.js instead, and use it for
  sqltyper's own purposes

- Add code generation for postgres.js with the `-t postgres` CLI option

- Add tests for the CLI

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,10 @@ jobs:
           POSTGRES_PASSWORD: sqltyper
 
     steps:
+      # Install psql
+      - run: sudo apt-get update
+      - run: sudo apt-get install postgresql-client-9.6
+
       - checkout
 
       # Restore bundle cache
