Upgrade to typescript@4

--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "node-watch": "^0.6.3",
     "packet-reader": "^1.0.0",
     "ramda": "^0.27.0",
-    "typescript": ">=3.8, <4.0",
+    "typescript": ">=3.8",
     "wrap-ansi": "^7.0.0",
     "yargs": "^15.3.1"
   }
