--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "sql": "ts-node src/cli.ts --target postgres --module '../postgres' --prettify src/sql/",
     "sql:check": "yarn run sql --check",
     "sql:watch": "yarn run sql --watch",
-    "lint": "eslint '**/*.ts' && prettier --check \"**/*.{json,md}\"",
+    "lint": "eslint --max-warnings 0 '**/*.ts' && prettier --check \"**/*.{json,md}\"",
     "lint:fix": "eslint --fix '**/*.ts' && prettier --write '**/*.{json,md}'",
     "build": "tsc -p tsconfig.dist.json",
     "clean": "rm -rf dist/",
@@ -35,9 +35,9 @@
     "@types/ramda": "^0.27.3",
     "@types/wrap-ansi": "^3.0.0",
     "@types/yargs": "^15.0.4",
-    "@typescript-eslint/eslint-plugin": "^4.0.0",
-    "@typescript-eslint/parser": "^3.9.1",
-    "eslint": "^7.7.0",
+    "@typescript-eslint/eslint-plugin": "^4.13.0",
+    "@typescript-eslint/parser": "^4.13.0",
+    "eslint": "^7.17.0",
     "eslint-plugin-prettier": "^3.1.3",
     "jest": "^26.0.1",
     "jest-cli": "^26.0.1",
