--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -7,8 +7,9 @@ jobs:
     name: Auto-merge minor and patch dependency updates
     runs-on: ubuntu-latest
     steps:
-      - uses: koj-co/dependabot-pr-action@master
+      - uses: akheron/dependabot-pr-action@master
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           merge-minor: true
           merge-patch: true
+          merge-method: rebase
