--- a/tests/cli/check.ts.template
+++ b/tests/cli/check.ts.template
@@ -16,5 +16,5 @@ declare const age: number | null
 export async function check(connection: Connection): Promise<void> {
   const _a: ExpectedRow[] = await sql.select(connection)
   const _b: ExpectedRow | null = await sql.selectLimit1(connection)
-  const _c: number = await sql.insert(connection, { name, age })
+  const _c: number = await sql.nested.insert(connection, { name, age })
 }
