--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ path = "src-rs/main.rs"
 lazy_static = "1.4.0"
 log = "0.4.14"
 nom = "7.0.0"
+nom-supreme = "0.6.0"
 regex = "1"
 tokio = { version = "1", features = [ "full" ] }
 tokio-postgres = "0.7.3"
