--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ nom-supreme = "0.6.0"
 postgres-types = { version = "0.2.2", features = ["with-serde_json-1"] }
 regex = "1"
 serde = { version = "1.0.136", features = ["derive"] }
+serde_json = "1.0.79"
 strum = "0.23.0"
 strum_macros = "0.23.1"
 tokio = { version = "1", features = ["full"] }
